# vmcp

./: .env.example  .gitignore  AGENT.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.yml  vmcp.toml
.github/scripts/: package.sh
.github/workflows/: release.yml
bench/: .gitignore  README.md  RESULTS.md  _extract_desc.py  _summary.py  analyze.py  mock_tool.py  pyproject.toml  run.py
bench/descriptions/: A_current.txt  A_v2.txt  B_terse.txt  C_noguidance.txt  HEAD.txt
bench/prompts/: SOURCES.md  system_claude_code.txt  system_cursor.txt  system_custom.txt  system_default.txt  system_hermes.txt
bench/tasks/: tasks.jsonl
crates/vmcp/: Cargo.toml
crates/vmcp-admin/: Cargo.toml
crates/vmcp-admin/src/: api.rs  auth.rs  integration.rs  lib.rs  pages.rs  rate_limit.rs  security.rs  ui_regression.rs
crates/vmcp-admin/static/: admin.css  admin.js  compare.js  sessions.js  skills.js
crates/vmcp-admin/templates/: compare.html  layout.html  main.html  notifications.html  schema.html  server_detail.html  servers.html  sessions.html  skills.html
crates/vmcp-auth/: Cargo.toml
crates/vmcp-auth/src/: client_store.rs  jwks.rs  lib.rs  middleware.rs  password.rs  router.rs  state.rs  static_tokens.rs  tokens.rs  types.rs
crates/vmcp-config/: Cargo.toml
crates/vmcp-config/src/: lib.rs
crates/vmcp-graphql/: Cargo.toml
crates/vmcp-graphql/src/: lib.rs  validation.rs
crates/vmcp-notify/: Cargo.toml
crates/vmcp-notify/src/: lib.rs
crates/vmcp-registry/: Cargo.toml
crates/vmcp-registry/src/: lib.rs
crates/vmcp-server/: Cargo.toml
crates/vmcp-server/src/: graphql_inject.rs  lib.rs  otel_file.rs  prompt_catalog.rs  prompt_proxy.rs  proxy.rs  recorder.rs  sessions.rs  skills.rs  tasks.rs
crates/vmcp-upstream/: Cargo.toml
crates/vmcp-upstream/src/: lib.rs  sql_guard.rs
crates/vmcp-watch/: Cargo.toml
crates/vmcp-watch/src/: lib.rs
crates/vmcp/src/: api_v1.rs  boot.rs  main.rs  mcp_capture.rs  mcp_otel.rs  registry_reload.rs
crates/vmcp/tests/: aggregation.rs  api_v1_tokens.rs  event_forwarding.rs  http_auth.rs  http_smoke.rs  http_upstream.rs  registry_reload.rs  run_task_tasks.rs
crates/vmcp/tests/common/: mod.rs
demo/: .gitignore  README.md  registry.json  registry.presentation.json  smoke_demo_gateway.py  vmcp.toml
demo/presentation/: .gitignore  presentation.ir.json
demo/skills/: demo_echo.yaml  memory_recall.yaml  memory_save.yaml
demo/specs/: agent_lsp.json  agentmemory.json  architect_c4.json  filesystem.json  presentation.json  rust-demo.json  time.json
demo/stand/: README.md  pyproject.toml
demo/stand/docs/: model.toml
demo/stand/src/: __init__.py  main.py
deploy/: Caddyfile  bootstrap.sh
docs/: README.md  aggregation.md  authentication.md  bench.md  builds-and-modes.md  clients.md  deployment.md  sessions.md  skills.md  tasks.md  upstreams.md
docs/badges/: coverage-admin.json  coverage.json
infra/: .env.example  deploy.sh
infra/caddy/: Caddyfile  Caddyfile.prod
infra/compose/: docker-compose.deploy.yml  docker-compose.yml
infra/docker/: .dockerignore  Dockerfile
infra/postgres/: init.sql
infra/specs/: agentmemory.json  container_use.json  postgres.json  time.json
