[package]
name = "vmcp-admin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vmcp-auth     = { path = "../vmcp-auth" }
vmcp-upstream = { path = "../vmcp-upstream" }
vmcp-notify   = { path = "../vmcp-notify" }
vmcp-graphql  = { path = "../vmcp-graphql" }
vmcp-server   = { path = "../vmcp-server" }
axum         = { workspace = true }
tower        = { workspace = true }
tower-http   = { workspace = true, features = ["fs"] }
tokio        = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util   = { version = "0.7", features = ["io"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
arc-swap     = { workspace = true }
async-graphql = { workspace = true }
dashmap      = { workspace = true }
parking_lot  = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
askama       = { workspace = true }
chrono       = { workspace = true }
futures      = { workspace = true }
base64       = "0.22"
