[package]
name = "vmcp-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vmcp-config = { path = "../vmcp-config" }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
dashmap = { workspace = true }
percent-encoding = { workspace = true }
rsa = { version = "0.9", features = ["pem"] }
base64 = "0.22"
sha2 = "0.10"
