[package]
name = "vmcp-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vmcp-registry = { path = "../vmcp-registry" }
vmcp-upstream = { path = "../vmcp-upstream" }
vmcp-notify   = { path = "../vmcp-notify" }
async-graphql = { workspace = true }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
