[package]
name = "vmcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vmcp-upstream = { path = "../vmcp-upstream" }
vmcp-notify   = { path = "../vmcp-notify" }
vmcp-graphql  = { path = "../vmcp-graphql" }
vmcp-registry = { path = "../vmcp-registry" }
rmcp = { workspace = true }
async-graphql = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
arc-swap = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
