[package]
name = "vmcp-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
otel = ["dep:opentelemetry", "dep:opentelemetry_sdk"]

[dependencies]
vmcp-upstream = { path = "../vmcp-upstream" }
vmcp-notify   = { path = "../vmcp-notify" }
vmcp-graphql  = { path = "../vmcp-graphql" }
vmcp-registry = { path = "../vmcp-registry" }
rmcp = { workspace = true }
async-graphql = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
schemars = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
arc-swap = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
