[package]
name = "vmcp-upstream"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
vmcp-registry = { path = "../vmcp-registry" }
vmcp-notify   = { path = "../vmcp-notify" }
rmcp = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
arc-swap = { workspace = true }
sqlparser = { version = "0.62", features = ["visitor"] }
