[package]
name = "vmcp"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "vmcp"

[[bin]]
name = "vmcp"
path = "src/main.rs"

[dependencies]
vmcp-config   = { path = "../vmcp-config" }
vmcp-registry = { path = "../vmcp-registry" }
vmcp-notify   = { path = "../vmcp-notify" }
vmcp-upstream = { path = "../vmcp-upstream" }
vmcp-graphql  = { path = "../vmcp-graphql" }
vmcp-auth     = { path = "../vmcp-auth" }
vmcp-server   = { path = "../vmcp-server" }
vmcp-admin    = { path = "../vmcp-admin" }
rmcp = { workspace = true }
async-graphql = { workspace = true }
url = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
arc-swap = { workspace = true }
bytes = "1"
futures = { workspace = true }
async-stream = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
